<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of service</string>
    <string name="how_was_the_service">How was the service</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">Okay (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="enter_bit">Enter num of bit</string>
    <string name="text_byt_radio_button">Bytes</string>
    <string name="text_Kbyt_radio_button">Kilobytes</string>
    <string name="text_Mbyt_radio_button">Megabytes</string>
    <string name="text_Gbyt_radio_button">Gigabytes</string>
    <string name="result_transfer">The rusult of the transfer</string>
</resources>